# XAUUSD

./: .gitignore  README.md  env.example  pyproject.toml
docs/: ARCHITECTURE.md
notebooks/: data_quality.ipynb  performance_insights.ipynb
src/goldbot/: __init__.py  config.py
src/goldbot/backtest/: __init__.py  engine.py
src/goldbot/data/: __init__.py  cli.py  loaders.py  quality.py  twelvedata_client.py
src/goldbot/execution/: __init__.py  broker_stub.py  mt5_adapter.py  smoke.py
src/goldbot/features/: __init__.py  technicals.py
src/goldbot/pipeline/: __init__.py  baseline.py
src/goldbot/reporting/: __init__.py  baseline_report.py
src/goldbot/strategies/: __init__.py  base.py  trend_following.py
src/goldbot/utils/: __init__.py  logging.py
tests/: test_data_io.py  test_imports.py  test_mt5_smoke.py  test_pipeline.py  test_reporting.py  test_twelvedata_client.py
